Fix: Width overflows for more digits
git-tfs-id: [http://tfs2012.dowjones.net:8080/tfs/DefaultCollection]$/Dow Jones Infrastructure;C97238

--- a/Prototypes/ExecutiveDashboards/trunk/Website/Content/pageTimings.scss
+++ b/Prototypes/ExecutiveDashboards/trunk/Website/Content/pageTimings.scss
@@ -29,7 +29,6 @@
 			font-weight: bold;
 			margin: 0 auto;
 			margin-bottom: 15px;
-			width: 75%;			
 		}
 		.min-stamp{
 			text-align: right;
